更新笔记 Activity注意点

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ RSS: false
 #zhihu_username:     PartingSoul
 github_username: PartingSoul
 juejin_username: 5c78c61e6fb9a049f362cc79
-#facebook_username:  PartingSoul
+csdn_username:  xinshoushanglu2333
 #jianshu_username:   PartingSoul
 #twitter_username:   PartingSoul
 
